--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -20,15 +20,25 @@ tr:nth-child(n+2):hover { filter: brightness(110%); }
 /* About */
 /* background-image: url("church.JPG"); background-repeat: repeat-y; */
 .article { display: flex; flex-direction: column; margin-top: 25px; }
-.article-section { display: flex; flex-direction: row; margin-bottom: 30px; padding: 20px; background-color: #4679B2;
-                   border-radius: 4px; }
-.section-head { text-align: left; font-size: 1rem; flex: 1 1 0; background: rgb(255, 255, 255, 0.6);
+.article-section { display: flex; flex-direction: row; margin-bottom: 30px; padding: 20px; 
+                   background-color: #4679B2; border-radius: 4px; }
+.section-head { text-align: left; font-size: 1.2rem; flex: 1; background-color: rgb(255, 255, 255, 0.6);
                 padding: 10px; margin-right: 25px; border-radius: 4px; }
-.section-text { text-indent: 40px; font-size: 1rem; text-align: left; padding: 10px; flex: 5 5 0; 
-                line-height: 1.3rem; background: rgb(255, 255, 255, 0.6); border-radius: 4px; }
+.section-content { font-size: 1rem; text-align: left; padding: 10px; flex: 5; 
+                    line-height: 1.3rem; background-color: rgb(255, 255, 255, 0.6); border-radius: 4px; }
+.section-content p { text-indent: 40px; font-size: 0.9rem; margin-bottom: 5px; }
+.sc-subsection { margin-bottom: 20px; padding: 6px; border: 2px white solid; border-radius: 4px; }
+.sc-subsection--logos { display: flex; flex-direction: column; justify-content: center; 
+                        align-items: center; }
+.sc-subsection--logos > div { margin: 10px 0px 10px 0px; display: flex; flex-direction: row;
+                             padding: 20px; flex-wrap: wrap; justify-content: space-evenly;
+                             width: 100%; }
+.sc-subsection__title { margin-bottom: 3px; }
+.sc-subsection__summary { cursor: pointer; margin-bottom: 3px; font-weight: bold; outline: none; }
 .origin { background-color: lightskyblue; }
-.tech { background-color: lightcoral; }
-.learn { background-color: lightgreen; }
+.tech { background-color: salmon; }
+.learn { background-color: sandybrown; }
+.lang-logo { height: 110px; margin: 10px; }
 
 /* Nav Bar */
 .navbar-container { background-color: rgb(85, 85, 85); width: 100%; padding: 15px 0; 
@@ -54,15 +64,16 @@ tr:nth-child(n+2):hover { filter: brightness(110%); }
 /* Page: New Game */
 .page-head { font-size: 3.4em; width: 100%; margin: 20px 0px 20px 0px; padding: 10px 0px; 
              text-align: center; }
-.ng-info { border: black 2px solid; background: lightblue; padding: 12px 25px; margin-bottom: 20px; font-size: 1.1em;
+.ng-info { border: black 2px solid; background: lightskyblue; padding: 12px 25px; margin-bottom: 20px; font-size: 1.1em;
            border-radius: 4px; }
-.ng-info > h4 { text-align: center; margin-bottom: 10px; font-size: 1.1em; }
-.ng-info > P { margin-bottom: 5px; }
-.option { border: black solid 3px; width: 100%; height: 100vh; max-height: 125px; overflow: hidden; 
+.ng-info > div { background-color: rgb(255, 255, 255, 0.6); border-radius: 4px; padding: 10px; width: 100%; font-size: 1.1em; }
+.ng-info h4 { text-align: center; margin-bottom: 10px; font-size: 1.1em; }
+.ng-info P { margin-bottom: 5px; }
+.option { border: black solid 3px; width: 100%; height: 100vh; max-height: 150px; overflow: hidden; 
           align-items: center; padding: 10px 0px 10px 20px; margin: 0px 0px 30px 0px; display: flex;
-          border-radius: 4px; transition: all 250ms ease; text-align: center;
+          border-radius: 8px; transition: all 250ms ease; text-align: center; background: #555555;
         }
-.option:hover {  box-shadow: -5px 7px 6px 1px rgb(85, 85, 85); max-height: 200px; }
+.option:hover {  box-shadow: -5px 7px 6px 1px rgb(85, 85, 85); max-height: 225px; }
 .form-btn { cursor: pointer; margin: 0.25rem 0rem; padding: 0.25rem 0.5rem; border: 0; line-height: 1.2; 
             border-radius: 0.25rem; color: white; font-family: inherit; font-size: 1rem;
             white-space: nowrap; background: gray; outline: none; }
@@ -71,10 +82,12 @@ tr:nth-child(n+2):hover { filter: brightness(110%); }
 .w-131 { width: 131px; }
 .form-btn--label { font-size: 1rem; line-height: 1.2; margin: 0.25rem 0rem; padding: 0.25rem 0.5rem; }
 .form-btn:hover { background-color: lightgray; }
-.icon { border: gold solid 5px; padding: 5px; width: 68px; font-size: 3em; 
-        margin: 0px 10px 0px 0px; 
+.icon { border: gold solid 6px; padding: 5px; width: 75px; font-size: 3.5em; 
+        margin: 0px 10px 0px 0px;  border-radius: 100%;
+        color: gold; background: black;
       }
-.text { font-size: 1.3em; padding: 23px; width: 80%; text-align: left; }
+.text { font-size: 1.3em; padding: 23px; width: 80%; text-align: left; background: rgb(255, 255, 240, 0.6);
+        margin: 10px; border-radius: 4px; border: white solid 3px; }
 .text > h4 { margin-bottom: 5px; }
 .text > p { margin-bottom: 4px; }
 .text > form { max-width: 100%; display: none; }
@@ -154,30 +167,28 @@ td, th { text-align: center; padding: 30px 1px 30px 1px; }
 /* Game: Prepositions */
 .prep-case { margin-left: 15px; }
 /* Game: Gender */
-.article { text-align: right; margin-right: 25px; }
+.gram-article { text-align: right; margin-right: 25px; }
 /* Game: Articles */
 .art-question { margin-right: 15px; }
 
 
 /* Login and Register Forms */
 .form-container { width: 100%; display: flex; justify-content: center; }
-.form-inline { display: flex; flex-direction: row; align-items: center; justify-content: center; 
+.form-inline { display: flex; flex-direction: row; align-items: flex-end; justify-content: center; 
                width: 100%; margin-bottom: 10px; 
              }
 .form-inline label { margin: 5px 10px 5px 0; }
-.form-inline .rego { vertical-align: middle; margin: 5px 10px 5px 0; padding: 10px; 
-                     background-color: #fff; border-top: none; border-right: none; 
-                     border-bottom: 6px solid #ccc; border-left: 6px solid #eee; 
-                     border-radius: 5px; 
-                   }
-.form-inline button { padding: 10px 20px; background-color: dodgerblue; border: 1px solid #ddd; 
-                      color: white; cursor: pointer; 
-                    }
+.rego { vertical-align: middle; margin: 5px 10px 5px 0; padding: 10px; border-radius: 5px; }
 .form-inline button:hover { background-color: royalblue; }
-.login-btn { padding: 8px 15px; margin: 15px 0; text-align: center; }
+.login-section { display: flex; flex-direction: column; }
+.login-section label { font-size: 1.2em; }
+.login-btn { padding: 8px 15px; text-align: center; background-color: dodgerblue; border: 1px solid #ddd;
+            color: white; cursor: pointer; font-size: 1.4em; line-height: normal; vertical-align: bottom;
+            border-radius: 4px; margin: 7px 0px; }
+.login-btn:hover { filter: brightness(110%); }
 
-.rego:focus { border-bottom: 6px solid royalblue; border-left: 6px solid lightblue; 
-              outline: none; box-shadow: 0 0 0 2pt royalblue; }
+.rego:focus { outline: none; box-shadow: 0 0 0 2pt royalblue; }
+.rego-link { font-size: 1.2em; }
 
 /* Profile Page */
 .profile-content { width: 85%; }
